# elementary-theme-gtk-module

./: COPYING  README.md  elementary_theme_gtk_module.c  meson.build
